<resources>
    <string name="app_name">Broadcast Maps</string>
    <string name="destination">Choose destination</string>
    <string name="settings">Settings</string>
    <string name="settings_general">General</string>
    <string name="unit_type">Unit Type</string>
    <string name="route_profile">Route Profile</string>
    <string name="voice">Navigation Voice</string>
    <string name="language">Language</string>

    <string name="device_default">Default for Device</string>

    <string name="default_unit_type" translatable="false">default_for_device</string>
    <string name="default_locale" translatable="false">default_for_device</string>
    <string name="default_route_profile">driving-traffic</string>

    <string name="unit_type_key" translatable="false">UNIT_TYPE_KEY</string>
    <string name="voice_key" translatable="false">VOICE_KEY</string>
    <string name="profile_key" translatable="false">PROFILE_KEY</string>
</resources>
