<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <PreferenceCategory
        android:title="@string/settings_general">

        <ListPreference
            android:defaultValue="@string/default_unit_type"
            android:entries="@array/unit_types"
            android:entryValues="@array/unit_type_values"
            android:key="@string/unit_type_key"
            android:title="@string/unit_type"/>

        <ListPreference
            android:defaultValue="@string/default_route_profile"
            android:entries="@array/profiles"
            android:entryValues="@array/profile_values"
            android:key="@string/profile_key"
            android:title="@string/route_profile"/>

        <CheckBoxPreference
            android:title="@string/voice"
            android:key="@string/voice_key"
            android:defaultValue="false"/>


    </PreferenceCategory>

</PreferenceScreen>